# python_template_carlton

./: Makefile  README.md  dev-requirements.txt  main.py  pyinstaller.py  setup.cfg
.github/workflows/: make-build.yml
src/add_three/: by_three.py
src/carlton_template/: __init__.py  fib.py  mod.py  test_fib.py  test_mod.py
tests/: test_add_by_three.py
