[metadata]
name = testptxg
version = 1.0.0
author = Carlton
author_email = carlton2tang@gmail.com
description = A simple example to understand the basics of developing your first Python package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/2niuhe/python_template
project_urls =
    Bug Tracker = https://github.com/2niuhe/python_template/issues
    repository = https://github.com/2niuhe/python_template
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src